Fixed spawning from spawner blocks, troll petrifying

--- a/src/main/resources/assets/dungeonmobs/lang/en_US.lang
+++ b/src/main/resources/assets/dungeonmobs/lang/en_US.lang
@@ -1,38 +1,38 @@
 block.bladetrap.name=Blade Trap
 tile.bladetrap.name=Blade Trap
-entity.dungeonmobs.DMBladeTrap.name=Blade Trap
-entity.dungeonmobs.DMRustMonster.name=Rust Monster
-entity.dungeonmobs.DMGhoul.name=Ghoul
-entity.dungeonmobs.DMShrieker.name=Shrieker
-entity.dungeonmobs.DMUmberHulk.name=Umber Hulk
-entity.dungeonmobs.DMHookHorror.name=Hook Horror
-entity.dungeonmobs.DMBeholder.name=Beholder
-entity.dungeonmobs.DMEyeRay.name=Eye Ray
-entity.dungeonmobs.DMTroll.name=Troll
-entity.dungeonmobs.DMCaveFisher.name=Cave Fisher
-entity.dungeonmobs.DMDestrachan.name=Destrachan
-entity.dungeonmobs.DMSonicBoom.name=Sonic Boom
-entity.dungeonmobs.DMIllithid.name=Illithid
-entity.dungeonmobs.DMNetherHound.name=Hell Hound
-entity.dungeonmobs.DMHellHound.name=Hell Hound
-entity.dungeonmobs.DMRakshasa.name=Rakshasa
-entity.dungeonmobs.DMRakshasaImage.name=Rakshasa
-entity.dungeonmobs.DMMagicMissile.name=Magic Missile
-entity.dungeonmobs.DMLizalfos.name=Lizalfos
-entity.dungeonmobs.DMCockatrice.name=Cockatrice
-entity.dungeonmobs.DMPetrified.name=Statue
-entity.dungeonmobs.DMManticore.name=Manticore
-entity.dungeonmobs.DMThoqqua.name=Thoqqua
-entity.dungeonmobs.DMRevenant.name=Revenant
-entity.dungeonmobs.DMVampire.name=Vampire
-entity.dungeonmobs.DMFallenAngel.name=Fallen Angel
-entity.dungeonmobs.DMLightball.name=Corrupted Lightball
-entity.dungeonmobs.DMEldermob.name=Outer Thing
+entity.dungeonmobs.dmbladetrap.name=Blade Trap
+entity.dungeonmobs.dmrustmonster.name=Rust Monster
+entity.dungeonmobs.dmghoul.name=Ghoul
+entity.dungeonmobs.dmshrieker.name=Shrieker
+entity.dungeonmobs.dmumberhulk.name=Umber Hulk
+entity.dungeonmobs.dmhookhorror.name=Hook Horror
+entity.dungeonmobs.dmbeholder.name=Beholder
+entity.dungeonmobs.dmeyeray.name=Eye Ray
+entity.dungeonmobs.dmtroll.name=Troll
+entity.dungeonmobs.dmcavefisher.name=Cave Fisher
+entity.dungeonmobs.dmdestrachan.name=Destrachan
+entity.dungeonmobs.dmsonicboom.name=Sonic Boom
+entity.dungeonmobs.dmillithid.name=Illithid
+entity.dungeonmobs.dmnetherhound.name=Hell Hound
+entity.dungeonmobs.dmhellhound.name=Hell Hound
+entity.dungeonmobs.dmrakshasa.name=Rakshasa
+entity.dungeonmobs.dmrakshasaimage.name=Rakshasa
+entity.dungeonmobs.dmmagicmissile.name=Magic Missile
+entity.dungeonmobs.dmlizalfos.name=Lizalfos
+entity.dungeonmobs.dmcockatrice.name=Cockatrice
+entity.dungeonmobs.dmpetrified.name=Statue
+entity.dungeonmobs.dmmanticore.name=Manticore
+entity.dungeonmobs.dmthoqqua.name=Thoqqua
+entity.dungeonmobs.dmrevenant.name=Revenant
+entity.dungeonmobs.dmvampire.name=Vampire
+entity.dungeonmobs.dmfallenangel.name=Fallen Angel
+entity.dungeonmobs.dmlightball.name=Corrupted Lightball
+entity.dungeonmobs.dmeldermob.name=Outer Thing
 block.lavarock.name=Magma Rock
 tile.lavarock.name=Magma Rock
-entity.dungeonmobs.DMVescavor.name=Vescavor
-death.attack.bladeTrap=%s was killed by a blade trap
+entity.dungeonmobs.dmvescavor.name=Vescavor
+death.attack.bladetrap=%s was killed by a blade trap
 death.attack.petrified=%s was turned to stone
 block.beamos.name=Beamos
 tile.beamos.name=Beamos
-entity.dungeonmobs.DMBeamosBeam.name=Beamos Laser
+entity.dungeonmobs.dmbeamosbeam.name=Beamos Laser
