Optimized blade trap

--- a/src/main/resources/assets/dungeonmobs/lang/en_US.lang
+++ b/src/main/resources/assets/dungeonmobs/lang/en_US.lang
@@ -1,4 +1,5 @@
 tile.dungeonmobs.bladetrap.name=Blade Trap
+block.dungeonmobs.bladetrap.name=Blade Trap
 entity.dungeonmobs.dmbladetrap.name=Blade Trap
 entity.dungeonmobs.dmrustmonster.name=Rust Monster
 entity.dungeonmobs.dmghoul.name=Ghoul
